--- a/package.json
+++ b/package.json
@@ -1,39 +1,12 @@
 {
   "name": "null0",
   "version": "0.0.0",
-  "description": "wasm-based game-engine",
   "type": "module",
-  "main": "node/index.js",
-  "scripts": {
-    "clean": "rimraf build wbuild",
-    "start:server": "live-server docs",
-    "build:retro": "cmake -GNinja -B build -DCARTS=OFF -DHOST_TYPE=RETRO && cmake --build build",
-    "build:carts": "cmake -GNinja -B build -DCARTS=ON -DHOST_TYPE=OFF && cmake --build build && cd cart/as && npm ci && npm run build",
-    "build:host": "cmake -GNinja -B build  -DCARTS=OFF -DHOST_TYPE=RAYLIB && cmake --build build",
-    "build:web": "emcmake cmake -GNinja -B wbuild && cmake --build wbuild",
-    "build:site": "mkdir -p docs/wasm && npm run build:web && npm run build:carts && cp wbuild/host/null0.* docs/wasm",
-    "watch:site": "npm-watch build:site",
-    "start": "run-p watch:site start:server"
-  },
-  "watch": {
-    "build:site": {
-      "patterns": [
-        "cart",
-        "host"
-      ],
-      "extensions": "js,html,c,h,png",
-      "legacyWatch": true
-    }
-  },
-  "keywords": [],
+  "scripts": {},
   "author": "David Konsumer <konsumer@jetboystudio.com>",
   "license": "ZLIB",
   "devDependencies": {
     "glob": "latest",
-    "live-server": "^1.2.0",
-    "npm-run-all": "latest",
-    "npm-watch": "latest",
-    "rimraf": "latest",
     "yaml": "^2.6.0"
   }
 }
