--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,9 @@ project(null0
   LANGUAGES C
 )
 
-# options:
-
-# CARTS=ON/OFF
-# HOST_TYPE=OFF/WEB/RAYLIB/SDL/RETRO
-
 set(CMAKE_BUILD_TYPE Release)
 cmake_policy(SET CMP0077 NEW)
-cmake_policy(SET CMP0135 NEW)
+# cmake_policy(SET CMP0135 NEW)
 
 # everyone wants to make an "uninstall" target
 set_property(GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1)
@@ -24,5 +19,43 @@ include(FetchContent)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tools/cmake")
 
-# find_package(null0)
-# TODO: include each dir here, and they all decide on how to build themselves
+# OPTIONS
+
+# if they are building in emscripten, use WEB host
+if(EMSCRIPTEN)
+    set(NULL0_HOST "WEB" CACHE STRING "Native Host-type: RAYLIB/SDL2/RETRO")
+endif()
+
+# if they set a host-type, default to building it
+if(NULL0_HOST)
+    set(NULL0_BUILD_HOST ON CACHE BOOL "Build host?: ON/OFF")
+endif()
+
+option(NULL0_HOST "Native Host-type: RAYLIB/SDL2/RETRO" "RAYLIB")
+option(CARTS "Build example carts: ON/OFF" OFF)
+option(NULL0_BUILD_HOST "Build host?: ON/OFF" OFF)
+
+if(NULL0_BUILD_HOST)
+    message(STATUS "null0: Build host: ${NULL0_HOST}")
+else()
+    message(STATUS "null0: Build host: OFF")
+endif()
+
+if(CARTS)
+    message(STATUS "null0: Build CARTS: ON")
+else()
+    message(STATUS "null0: Build CARTS: OFF")
+endif()
+
+# TODO; look into eum-validation for NULL0_HOST
+
+
+# TARGETS
+
+if(NULL0_BUILD_HOST)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/host)
+endif()
+if(CARTS)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cart/c)
+endif()
+
