working on cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tools/cmake")
 
 # if they are building in emscripten, use WEB host
 if(EMSCRIPTEN)
-    set(NULL0_HOST "WEB" CACHE STRING "Native Host-type: RAYLIB/SDL2/RETRO")
+    set(NULL0_HOST "WEB" CACHE STRING "Native Host-type: RAYLIB/SDL2/RETRO/IWASM")
 endif()
 
 # if they set a host-type, default to building it
@@ -31,7 +31,7 @@ if(NULL0_HOST)
     set(NULL0_BUILD_HOST ON CACHE BOOL "Build host?: ON/OFF")
 endif()
 
-option(NULL0_HOST "Native Host-type: RAYLIB/SDL2/RETRO" "RAYLIB")
+option(NULL0_HOST "Native Host-type: RAYLIB/SDL2/RETRO/IWASM" "RAYLIB")
 option(CARTS "Build example carts: ON/OFF" OFF)
 option(NULL0_BUILD_HOST "Build host?: ON/OFF" OFF)
 
